Consentimientos Informados con textos.

--- a/HospitalApp-web/src/main/webapp/ConsentimientoVIH.xhtml
+++ b/HospitalApp-web/src/main/webapp/ConsentimientoVIH.xhtml
@@ -60,13 +60,16 @@
             </p:panel>    
             <p:panel id="verConsentimientoVIH" toggleable="true" header="Consentimiento">
                 <div align="justify">
-                    TEXTO.....
-                </div>
-
+                    Estimado(a) consultante:
+                    El Ministerio de Salud y el Hospital Barros Luco Trudeau han determinado
+                    que usted debe autorizar por escrito, voluntariamente y
+                    conociendo de que se trata el examen para deteccion del VIH,
+                    por lo tanto ruego a usted firmar frente a la alternativa que
+                    usted decida. Esta decisión no altera su derecho a la atencón que
+                    le corresponde.
+                </div>                
                 <br/>
-                <br/>
-                <br/>
-                <br/>                  
+                <br/>              
 
                 <p:outputLabel value="Estado: "/>
                 <p:selectOneMenu id="est" value="#{consentimientoInf.estado}" > 
