--- a/HospitalApp-web/src/main/webapp/Esterilizacion.xhtml
+++ b/HospitalApp-web/src/main/webapp/Esterilizacion.xhtml
@@ -122,9 +122,49 @@
 
             <p:panel id="ConsentimientoEst" toggleable="true" header="Consentimiento">
                 <div align="justify">
-                    Yo, anteriormente identificado... 
+                    Yo, anteriormente identificada, en conocimiento de los derechos que otorga la legislacion chilena
+                    y a las directrices para los Servicios de Salud sobre la Esterilización Femenina y Maculina,
+                    emanadas del Ministerio de Salud, he sido informado y se me han aclarado las dudas respecto de la
+                    Esterilización Quirúrgica Voluntaria y de otros métodos de regulación de la fertilidad que yo pudiera
+                    elegir usar:
+                    <br></br>
+                </div>
+                <div align="justify">
+                        <br></br>
+                        1. Me han explicado que en los Consultorios de Atención Primaria, se cuenta con Métodos Anticonceptivos
+                        reversibles, tales como la T con Cobre (Dispositivo Intrauterino - DIU), Hormonales orales y Condones,
+                        todos ellos de distribuición gratuita, y que existen a la venta en el comercio otros de similares características.<br></br> 
+                        2. Mr han explicado que la Esterilización Quirúrgica Voluntaria (EQV) que solicito, es una intervención cuyos
+                        detalles y riesgos son los siguientes:<br></br>
+                            <br></br>
+                            - Que es considerada irreversible, es decir, que es probable que no podré embarazarme nunca más, si la
+                            operación es exitosa.<br></br> 
+                            - Que puede fallar: una a tres de cada 1000 mujeres operadas, podrían embarazarse.<br></br> 
+                            - Que una vez operdad, si deseare un embarazo deberé someterme a una nueva intervención
+                            quirúrgica de alta complejidad, que demanda requisitos que debo cumplir en ese momento, y cuyo éxito
+                            varía entre 0 y 40%. La factibilidad de realizarla la decidirá el equipo médico de acuerdo al caso en
+                            particular y las disponibilidades materiales y técnicas al momento de la solicitud.<br></br> 
+                            - Que podré acceder a la Esterilización Quirúrgica en la medida que el Servicio de Salud disponga de los
+                            recursos para efectuar este procedimiento.<br></br> 
+                            - Que la intervención se debe efectuar bajo anestesia regional (raquídea o epidural) o general y la
+                            matrona ma explicado los riesgos que esta implica y doy mi consentimiento para la administración de
+                            los anestésicos, transfusiones o tratamiento alternativos a la transfusión disponibles que se consideren
+                            necesarios para preservar mi estado de salud durante mi intervención y hospitalización.<br></br> 
+                            - Que una vez firmada esta solicitud por el profesional tratante y por mí, debo solicitar hora a través de los
+                            mecanismos habituales para ser evaluada médicamente en el Servicio Clínico de Obstetricia y
+                            Ginecología correspondiente, donde se confeccionará una ficha clínica y se solicitarán en los exámenes
+                            preoperatorios.<br></br> 
+                            - Que también puede practicarse la esterilización durante la realización de una operación cesárea,
+                            evitando una segunda intervención quirúrgica.<br></br> 
+                            <br></br>
+                        3. Me han explicado que podré cambiar mi decisión de esterilizarme quirúrgicamente antes de iniciado el
+                        procedimiento y que el Servicio de Salud me seguirá atendiendo de manera habitual.<br></br> 
+                        4. Me han explicado que existe la posibilidad que mi pareja (hombre) también pueda acceder a esterilización
+                        quirúrgica voluntaria (Vasectomía). He tomado conocimiento de las alternativas donde puede realizarse, sus
+                        ventajas y riesgos.<br></br>                         
                 </div>             
-
+                <br/>
+                <br/>
                 <p:outputLabel value="Estado: "/>
                 <p:selectOneMenu id="est" value="#{consentimientoInf.estado}" > 
                     <f:selectItem itemLabel="Pendiente" itemValue="Pendiente" />
