--- a/HospitalApp-web/src/main/webapp/VisualizarPaciente.xhtml
+++ b/HospitalApp-web/src/main/webapp/VisualizarPaciente.xhtml
@@ -473,7 +473,7 @@
                     <p:message for="hijosVivos" display="icon"/>
                     
                     <h:outputText value="Embarazada Actualmente: " />  
-                    <p:selectBooleanCheckbox id = "id1" value="#{buscarPaciente.consentimientoInformadoSeleccionado.consentEmbarazada}"  >                            
+                    <p:selectBooleanCheckbox disabled="true" id = "id1" value="#{buscarPaciente.consentimientoInformadoSeleccionado.consentEmbarazada}"  >                            
                     </p:selectBooleanCheckbox>
                     <p:message id="msgMaq" for="id1"  /> 
                     
