--- a/HospitalApp-web/src/main/webapp/Paciente.xhtml
+++ b/HospitalApp-web/src/main/webapp/Paciente.xhtml
@@ -168,7 +168,7 @@
                         </p:panelGrid>
                     </p:panel>
                 </p:panelGrid>
-                <p:commandButton update="formul" actionListener="#{pacienteMB.agregarPaciente(actionEvent)}"  value="Ingresar Admisión"/>
+                <p:commandButton update="formul" actionListener="#{pacienteMB.agregarPaciente(actionEvent)}"  value="Ingresar Admisión" icon="ui-icon-save"/>
 
             </div>
         </h:form>
