--- a/HospitalApp-web/src/main/webapp/Especialidad.xhtml
+++ b/HospitalApp-web/src/main/webapp/Especialidad.xhtml
@@ -57,7 +57,7 @@
                 <h:inputText id="codigo" value="#{especialidadMB.espeId}"/>
                 <h:outputText value="Nombre Especialidad:" />
                 <h:inputText value="#{especialidadMB.espeNombre}"/>
-                <p:commandButton value="Guardar" update=":subespecialidades" actionListener="#{especialidadMB.nuevaEspecialidad(actionEvent)}" icon="ui-icon-disk"/>
+                <p:commandButton value="Guardar" update=":especialidades" actionListener="#{especialidadMB.nuevaEspecialidad(actionEvent)}" icon="ui-icon-disk"/>
                 <p:commandButton value="Cancelar" onclick="PF('addEspec').hide()" icon="ui-icon-close"/>
             </h:panelGrid>
         </p:dialog>
